alignment fix

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,6 +47,8 @@
 
   /* Container-specific styles */
   .container {
+    padding-bottom: 50px; /* Add space at the bottom */
+    margin-bottom: 50px; /* Adjust if necessary */
     /* Heading styling */
     h1 {
       margin-top: $lineR; /* Margin-top based on variable */
@@ -152,6 +154,10 @@
         text-align: center;
       }
       .line {
+        display: flex; /* Use flexbox to center the text */
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        text-align: center; /* Center text within the container */
         img {
           display: none;
         }
@@ -159,13 +165,12 @@
         .phrase-text {
           font-size: $lineW;
           font-weight: 400;
-          display: flex; /* Use flexbox to center the text */
-          justify-content: center; /* Center horizontally */
-          align-items: center; /* Center vertically */
-          text-align: center; /* Center text within the container */
           &::before {
             content: "Fashion is part of the daily air and it all the time, with all the events.";
             white-space: normal; /* Remove preserved whitespace */
+            display: flex;
+            text-align: center;
+            margin: auto;
           }
         }
       }
@@ -209,10 +214,15 @@
 
   @media screen and (min-width: 670px) and (max-width: 998px) {
     margin-top: 8rem;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+
   }
 
   @media screen and (max-width: 660px) {
     margin-top: 4rem;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
   }
 }
 
